# crust

./: .dockerignore  Cargo.toml  Dockerfile  README.md
assets/: index.html
docker/: Dockerfile  dummy.rs
docs/: Checkpoint.md  Checkpoint_feedback.txt  Final.md  Proposal.md  Proposal_feedback.txt
src/: extractor.rs  lib.rs  main.rs  tests.rs
