[package]
name = "crust"
version = "0.1.0"
authors = ["a3y3 <sohamssd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
dockertest = "0.2.1"

[[bin]]
name = "docker-only"
path = "docker/dummy.rs"
