[package]
name = "crust"
version = "0.1.0"
authors = ["a3y3 <sohamssd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dockertest = "0.2.1"
gotham = "0.6.0"
gotham_derive = "0.6.0"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
reqwest = { version = "0.11", features = ["json"] }
tokio = "1.0"
mime = "0.3.16"
url = "2.1"
anyhow = "1.0.40"
simple-error = "0.2.3"
rand = "0.8.3"

[[bin]]
name = "crust"
path = "src/main.rs"
